# Tests directory
# This placeholder allows the build to succeed.
# Add test executables and configurations here as needed.

enable_testing()

# Example test structure (uncomment and modify when adding tests):
# add_executable(compiler_test test_compiler.cpp)
# target_link_libraries(compiler_test PRIVATE sub_middle_end sub_backend)
# add_test(NAME CompilerTest COMMAND compiler_test)
